Refactor CracProcess to allow multi-waiting